# warudo

./: .gitignore  :memory  AUTHORS  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.old  README.md  TESTS.md  app.php  config.ini  hctree.diff  index.html  index.php  lighttpd.conf  nginx.conf  parselog.php  stress-test.c  warudo.c  warudo.conf.default  warudo.json.default  zaerl.conf  zaerl.db-shm  zaerl.db-wal
.claude/: settings.local.json
cli/: CMakeLists.txt  data.c  main.c
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/assets/: main.css
client/src/charts/: index.ts
client/src/components/: ChartGraph.vue  DateTime.vue  Footer.vue  Graph.vue  JSONBlock.vue  KeysList.vue  MainGrid.vue  ModalDialog.vue  Nav.vue  PageNav.vue  Search.vue  SearchBar.vue  SideMenu.vue  TableHeaderState.vue  TableRowState.vue
client/src/components/search/: SearchAddFilter.vue  SearchBar.vue  SearchFilters.vue
client/src/data/: api.ts  settings.ts  table.ts  theme.ts
client/src/router/: index.ts
client/src/stores/: modal.ts  settings.ts
client/src/views/: DashboardView.vue  DashboardsView.vue  EntriesView.vue  EntryView.vue  HomeView.vue  NewDashboardView.vue  NewViewView.vue  NotFoundView.vue  SettingsView.vue  ViewView.vue  ViewsView.vue
config/: config.h.in  warudo.conf.in  warudo.json.in
hctree-amalgamation/: sqlite3.h
modules/: CMakeLists.txt  Makefile  main.c
old/: app.php
src/: CMakeLists.txt  app.c  auth.c  auth.h  code.c  code.h  conf.c  conf.h  conf.re  config.c  config.h  data.c  data.h  db.c  db.h  env.c  env.h  fcgi.c  fcgi.h  fs.c  fs.h  home.c  hpack.c  hpack.h  html.c  html.h  http.c  http.h  init.c  j6251.c  log.c  log.h  main.c  net.c  net.h  output.c  output.h  query.c  query.h  queue.c  (+19 more)
src/sqlite3/: CMakeLists.txt  sqlite3.h
static/css/: main.css
static/images/: site.webmanifest
static/js/: main.js
test/: CMakeLists.txt  app.c  attractor.c  attractor.h  auth.c  code.c  conf.c  data.c  db.c  env.c  fcgi.c  fs.c  home.c  hpack.c  http.c  init.c  log.c  net.c  output.c  query.c  queue.c  route-app.c  route-home.c  server.c  test-utils.c  test.c  test.h  time.c  timing.c  tls.c  version.c  warudo.c  worker.c
test/attractor/: attractor.c  attractor.h
tools/: code-coverage.php  code-coverage.py  configs.json  generate-config.php  generate-config.py  generate-tests.php  generate-tests.py  parse-log.php  parse-log.sh  src-query.txt  test-query.txt  utils.py
